# ESGI-3D-Viewer

./: CMakeLists.txt  README.md
data/: app.config.json  appinfo.json
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
src/: main.cpp
src/core/: window.cpp  window.h
src/core/math/: math.h
src/core/rendering/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/core/system/: Time.h
src/core/world/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  scene.h  transform.cpp
src/shaders/: default.glsl  ocean.glsl  skybox.glsl
